🔧 JVM Configuration Documentation Update - Match Actual Project Settings
📋 Updated JVM Configuration Section:
- Aligned with actual OpenJDK 21 usage in all Dockerfiles
- Matched docker-compose.yml JVM_OPTS configurations
- Documented framework-specific memory allocations
- Explained why different frameworks need different configurations

🎯 Key Changes:
- **High-Performance Frameworks (4GB)**: Kryo, Cap'n Proto, FlatBuffers, gRPC, Apache Avro, FST, MessagePack, Apache Thrift
- **Resource-Optimized Frameworks (2GB)**: CBOR, BSON, Apache Arrow, SBE, Apache Parquet
- **FST Special Configuration**: Module system access for reflection optimization

📊 Configuration Breakdown:
- Memory Management: 4GB vs 2GB heap based on framework requirements
- Garbage Collection: G1GC with 200ms max pause for predictable performance
- Module System Access: Required only for FST framework (Java 21 encapsulation)

🔍 Framework-Specific Rationale:
- **Kryo**: Object caching requires more memory
- **Cap'n Proto**: Zero-copy operations benefit from larger heap
- **FlatBuffers**: Memory mapping and large object handling
- **gRPC**: HTTP/2 and streaming operations
- **Apache Avro**: Schema processing and compression
- **FST**: Reflection-based optimization needs memory
- **CBOR/BSON**: Compact formats, lower memory footprint
- **Apache Arrow**: Columnar format, optimized memory layout
- **SBE**: Simple Binary Encoding, minimal overhead
- **Apache Parquet**: Columnar storage, efficient compression

📚 Documentation Now Includes:
- Actual docker-compose.yml configurations
- Local development setup instructions
- Framework-specific configuration rationale
- Performance impact explanations

Ready for production use with accurate JVM configuration documentation